--- a/_includes/_layout.html
+++ b/_includes/_layout.html
@@ -11,6 +11,7 @@
 
 <html class="{{ html_class | downcase }}" lang="{{ site.language }}">
 <head>
+  {% gtm head %}
   {% include _partials/head.html %}
   <title>{{ title }}</title>
   {% include _third-party/analytics/index.html %}
