--- a/about/style.css
+++ b/about/style.css
@@ -20,13 +20,13 @@ body {
   background-size: contain;
   font-family: "Red Hat Text", sans-serif;
   text-transform: uppercase;
+  overflow: hidden;
 }
 
 h3 {
   display: grid;
   place-items: center;
   width: 100%;
-  height: 100px;
   font-size: 20px;
   letter-spacing: 8px;
   text-align: center;
@@ -42,9 +42,6 @@ h3 {
   body {
     background-size: auto;
     background-position: center bottom, -850px bottom;
-  }
-  h3 {
-    margin-top: 120px;
   }
   .clock {
     margin-top: 20px;
